# Robotic-Arm-Simulation-in-ROS2-using-python-ubuntu-22.04-

./: CMakeLists.txt  README.md
config/: my_controllers.yaml
launch/: display.launch.py  gazebo_sim.launch.py
launch/launch/: gazebo_sim.launch.py
rviz/: robot_arm.rviz
scripts/: control_arm.py  instant_keyboard_control.py  keyboard_control.py
urdf/: my_robot_arm.urdf.xacro  my_robot_arm_gazebo.urdf.xacro
worlds/: empty_world.world
